# spatial-building-embeddings

./: .gitignore  AGENTS.md  README.md  config.example.toml  config.py  config.toml  pyproject.toml  test_nonewline.txt
.github/workflows/: enforce-pyarrow-exclusion.yml
clustering/: README.md
difficulty_metadata/: __init__.py  compute_difficulty.py  compute_neighbors.py  config.py
difficulty_metadata/slurm/: difficulty_metadata.sbatch  submit_difficulty_metadata.sh  submit_visual_neighbors.sh  visual_neighbors.sbatch
docs/: MIGRATION.md  embeddings_and_data_architecture.md
download_raw_data/: README.md  download.sh  install_aria2.sh
embedding_pipeline/: README.md
embedding_pipeline/difficulty/: __init__.py  compute_visual_neighbors.py
embedding_pipeline/difficulty/slurm/: submit_visual_neighbors.sh  visual_neighbors.sbatch
embedding_pipeline/generate/: generate_embeddings.py
embedding_pipeline/generate/slurm/: generate_embeddings_array.sbatch  submit_embedding_jobs.sh
embedding_pipeline/preprocess/: compute_fingerprints.py  fix_intermediate_schema.py  merge_and_split.py  process_tar.py  raw_data_structure.md  summarize_ids.py
embedding_pipeline/preprocess/slurm/: compute_fingerprints_array.sbatch  merge_and_split.sbatch  process_tar_array.sbatch  submit_fingerprint_jobs.sh  submit_merge.sh  submit_tar_jobs.sh
embedding_pipeline/publish/: README.md  convert_to_hf.py  demo_usage.py  estimate_model_size.py  generate_embeddings_from_hf.py  generate_embeddings_from_parquet.py  modeling_spatial_embeddings.py
embedding_pipeline/publish/slurm/: generate_embeddings_from_parquet.sbatch  submit_embeddings_from_parquet.sh
embedding_pipeline/train/: README.md  __init__.py  datasets.py  fetch_best_and_train.py  loss.py  optuna_worker.py  train.py
embedding_pipeline/train/slurm/: submit_best_training.sh  submit_optuna_tuning.sh  train_best.sbatch  train_optuna_trial.sbatch
generate_embeddings/: __init__.py  config.py  generate_embeddings.py
generate_embeddings/slurm/: generate_embeddings_array.sbatch  submit_embedding_jobs.sh
preprocess_raw_data/: __init__.py  compute_fingerprints.py  config.example.toml  config.py  fix_intermediate_schema.py  merge_and_split.py  process_tar.py  raw_data_structure.md  summarize_ids.py
preprocess_raw_data/slurm/: compute_fingerprints_array.sbatch  merge_and_split.sbatch  process_tar_array.sbatch  submit_fingerprint_jobs.sh  submit_merge.sh  submit_tar_jobs.sh
publish_model/: README.md  configuration_spatial_embeddings.py  convert_to_hf.py  demo_usage.py  generate_embeddings_from_parquet.py  modeling_spatial_embeddings.py
publish_model/slurm/: generate_embeddings_from_parquet.sbatch
slurm/: common.sh
train_specialized_embeddings/: README.md  __init__.py  config.example.toml  config.py  config.toml  datasets.py  fetch_best_and_train.py  loss.py  model.py  optuna_worker.py  train.py
train_specialized_embeddings/slurm/: submit_best_training.sh  submit_optuna_tuning.sh  submit_training.sh  train_best.sbatch  train_optuna_trial.sbatch  train_triplet.sbatch
