[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-building-embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.36.0,<1.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    # Note: pyarrow is deliberately NOT included here because it is provided by the Arrow module
    # on Alliance clusters. The SLURM scripts load the Arrow module (arrow/17.0.0) before
    # creating/activating the virtual environment, which makes PyArrow available.
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.setuptools]
# Exclude utility directories from package discovery
# These are scripts/tools, not installable packages
packages = []

